--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,9 @@ dependencies {
 
     implementation 'org.glassfish.jersey.inject:jersey-hk2:3.0.4'
     implementation 'org.glassfish.jersey.containers:jersey-container-grizzly2-http:3.0.4'
+    implementation 'ch.qos.logback:logback-core:1.2.11'
+    implementation 'org.slf4j:slf4j-api:1.7.36'
+    implementation 'ch.qos.logback:logback-classic:1.2.11'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
 }
