--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,10 @@ dependencies {
     implementation 'ch.qos.logback:logback-core:1.2.11'
     implementation 'org.slf4j:slf4j-api:1.7.36'
     implementation 'ch.qos.logback:logback-classic:1.2.11'
+  //  implementation 'org.mockito:mockito-inline:4.6.1'
+    implementation 'org.mockito:mockito-junit-jupiter:4.6.1'
+    implementation 'org.mockito:mockito-all:1.10.19'
+    implementation 'junit:junit:4.13.1'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
 }
