--- a/build.gradle
+++ b/build.gradle
@@ -19,7 +19,8 @@ dependencies {
     implementation 'ch.qos.logback:logback-core:1.2.11'
     implementation 'org.slf4j:slf4j-api:1.7.36'
     implementation 'ch.qos.logback:logback-classic:1.2.11'
-    //  implementation 'org.mockito:mockito-inline:4.6.1'
+    implementation 'org.glassfish.jersey.media:jersey-media-json-jackson:3.0.4'
+    testImplementation 'org.assertj:assertj-core:3.23.1'
     testImplementation 'org.mockito:mockito-junit-jupiter:4.6.1'
     testImplementation 'org.mockito:mockito-all:1.10.19'
     testImplementation 'junit:junit:4.13.1'
